Fix styling on mobile

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -159,14 +159,13 @@
     width: 100%;
     height: 825px;
     padding-inline: 0.5rem;
-    gap: 1.5rem 0;
 }
 
 .location-time-div {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 5rem;
+    padding-top: 4.5rem;
     text-align: center;
     grid-column: span 2;
     grid-row: 1;
@@ -186,7 +185,7 @@
 }
 
 .weather-div .icon {
-    width: 115px;
+    width: 100px;
     grid-row: 2;
     align-self: center;
     justify-self: end;
@@ -202,7 +201,7 @@
 
 .temp-scale-div .temp-div {
     display: flex;
-    font-size: 50px;
+    font-size: 45px;
 }
 
 .temp-div h2:not(.active) {
@@ -256,7 +255,7 @@
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
-    height: 315px;
+    height: 260px;
 }
 
 .slides-div::-webkit-scrollbar {
@@ -276,7 +275,6 @@
     grid-template: repeat(2, 1fr) / repeat(2, 1fr);
     place-items: center;
     text-align: center;
-    padding: 1rem 0 0 0;
     overflow-y: hidden;
     gap: 0 12px;
 }
@@ -299,7 +297,7 @@
 
 .weather-properties-div .square-div {
     width: 130px;
-    height: 130px;
+    height: 120px;
     background-color: #DFE1E5;
     border-radius: 24px;
     padding: 1rem;
@@ -394,7 +392,7 @@
 }
 
 .indicator-div {
-    margin-top: 12px;
+    margin-top: 5px;
     display: flex;
     justify-content: center;
     gap: 8px;
@@ -442,7 +440,7 @@
     }
 
     .weather-div .icon {
-        width: 300px;
+        width: 150px;
         grid-column: span 2;
         justify-self: center;
     }
@@ -516,7 +514,7 @@
 
     .day-div .day-temp-div {
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
     }
 }
 
